fix menu item alignment on scroll

--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -6808,6 +6808,12 @@ a:hover {
         margin-top: 20px;
         display: block;
     }
+    .is-scrolled {
+        .header__menu,
+        .header__meta {
+            margin-top: 0;
+        }
+    }
 }
 
 .is-showing-logged-in {
